# DiscordSocialSDKExamples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindDiscordSDK.cmake
examples/01_simple/: CMakeLists.txt  main.cpp
